# cedar-access-control-for-k8s

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  kind.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cedar-validation.yaml  golangci-lint.yaml  unit-tests.yaml
api/v1alpha1/: config_types.go  config_types_test.go  groupversion_info.go  policy_types.go  zz_generated.deepcopy.go
cedarschema/: k8s-authorization.cedarschema  k8s-authorization.cedarschema.json  k8s-full.cedarschema  k8s-full.cedarschema.json
cmd/admission-webhook/: main.go
cmd/authz-webhook/: main.go
cmd/cedar-webhook/: main.go
cmd/converter/: main.go
cmd/schema-formatter/: main.go
cmd/schema-generator/: main.go
cmd/vap-converter/: main.go
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_webhook_patch.yaml  webhookcainjection_patch.yaml
config/manager/: manager.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  (+7 more)
demo/: admission-policy.yaml  admission-webhook.yaml  authorization-policy.yaml
docs/: CedarIntroduction.md  CedarSchemas.md  ConvertRBAC.md  Demo.md  Development.md  FutureFeatures.md  Limitations.md  Operations.md  RejectedFeatures.md  Setup.md
manifests/: admission-webhook.yaml  cedar-authorization-webhook.yaml
mount/: audit-policy.yaml  authorization-config.yaml  authorization-webhook.yaml  cedar-config.yaml  webhook.yaml
rust-docker/: .dockerignore  Dockerfile  Makefile
rusttest/: allow.sar.json  deny.sar.json  no-opinion.sar.json  test.sh
scratch/: Dockerfile
src/: README.md  admission_entities.rs  admission_entities_test.rs  admission_handler.rs  authorizer.rs  k8s_entities.rs  k8s_entities_test.rs  k8s_resource.rs  k8s_resource_test.rs  lib.rs  main.rs  name_transform.rs  policy_store.rs  validation_handler.rs
(+118 files in other folders)
