[package]
name = "cedar-k8s-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive", "admission", "default"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
tokio = { version = "1.35.1", features = ["full"] }
axum = { version = "0.7.3", features = ["http2"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
cedar-policy = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive", "admission", "default"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }
